# langrank

./: Cargo.toml  README.md
.github/workflows/: ci.yml  deploy.yml  release.yml
benches/: parsing.rs
src/: cli.rs  formatting.rs  main.rs  parsing.rs  progress.rs  report.rs  schulze.rs  sources.rs  summary.rs
src/sources/: benchmarks.rs  languish.rs  pypl.rs  techempower.rs  tiobe.rs
