[package]
name = "langrank"
version = "0.2.5"
edition = "2024"

[dependencies]
anyhow = "1.0"
csv = "1.4"
reqwest = { version = "0.13", default-features = false, features = [
	"gzip",
	"json",
	"rustls",
	"webpki-roots",
	"socks",
] }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = [
	"macros",
	"rt-multi-thread",
	"fs",
	"time",
] }
colored = "3.1"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
clap_complete = "4.5"
rustc-hash = "2.1"
ndarray = "0.17"
indicatif = "0.18"

[profile.release]
strip = true
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3

# rustflags = [
# "-Ctarget-cpu=native",
# "-Ctarget-cpu=x86-64-v3",
# "-Ctarget-feature=+avx2,+fma",
# ]

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
