[package]
name = "langrank"
version = "0.2.9"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "A command-line tool to rank programming languages based on various metrics."
repository = "https://github.com/hexqnt/langrank"
homepage = "https://langrank.hexq.ru"
readme = "README.md"
keywords = ["programming-language", "ranking", "cli", "benchmark", "schulze"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
csv = "1.4"
reqwest = { version = "0.13", default-features = false, features = [
	"gzip",
	"json",
	"rustls",
	"webpki-roots",
	"socks",
] }
scraper = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = [
	"macros",
	"rt-multi-thread",
	"fs",
	"time",
] }
colored = "3.1"
clap = { version = "4.6", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
clap_complete = "4.6"
rustc-hash = "2.1"
ndarray = "0.17"
indicatif = "0.18"
maud = "0.27.0"
flate2 = "1.1"
minify-html = "0.18.1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
	"html_reports",
] }

[[bench]]
name = "parsing"
harness = false

[profile.release]
strip = true
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3

# rustflags = [
# "-Ctarget-cpu=native",
# "-Ctarget-cpu=x86-64-v3",
# "-Ctarget-feature=+avx2,+fma",
# ]

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
